samples/separate1-duplicate-ingress-hosts.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-host-example2
spec:
  rules:
    - host: example-host.example.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
